# CMakeJni

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/lutao/cmakejni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jnidynamicload.cpp  native-lib.cpp
app/src/main/cpp/echo/: Echo.cpp  com_example_lutao_cmakejni_EchoClientActivity.h  com_example_lutao_cmakejni_EchoClientActivity_ClientTask.h  com_example_lutao_cmakejni_EchoServerActivity.h  com_example_lutao_cmakejni_EchoServerActivity_ServerTask.h  com_example_lutao_cmakejni_LocalEchoActivity.h  com_example_lutao_cmakejni_LocalEchoActivity_ClientTask.h  com_example_lutao_cmakejni_LocalEchoActivity_ServerTask.h  com_example_lutao_cmakejni_MainActivity.h
app/src/main/cpp/player/bitmap/: com_example_lutao_cmakejni_player_bitmap_AbstractPlayerActivity.h
app/src/main/java/com/example/lutao/cmakejni/: MainActivity.java
app/src/main/java/com/example/lutao/cmakejni/echo/: AbstractEchoActivity.java  EchoClientActivity.java  EchoServerActivity.java  LocalEchoActivity.java
app/src/main/res/layout/: activity_bitmap.xml  activity_echo_client.xml  activity_echo_server.xml  activity_local_echo.xml  activity_main.xml  activity_main_bitmap.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lutao/cmakejni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
